syntax = "proto3";

import "Messages/test_proto3_optional.proto";
import "google/protobuf/timestamp.proto";


option csharp_namespace = "Validation.Mediator";

package Validator;

message AddressValidationRequest {
  string Address = 1;
}
message AddressValidationRequests {
  repeated AddressValidationRequest Addresses = 1;
}

message AddressValidationReply {
  StringValidationResult Address = 1;
}

message AddressValidationReplies {
  repeated AddressValidationReply Addresses = 1;
}